# traffic-studies

./: .gitignore  README-Observable.md  README.md  dashboard.py  main.py  observablehq.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  styles.css  traffic_analysis.py
data/: 2809-Hampshire_AIO.csv  2809_Hampshire_Ave_N-ALL.csv  2809_Hampshire_Ave_N-Northbound-CLS.csv  2809_Hampshire_Ave_N-Northbound-SPD.csv  2809_Hampshire_Ave_N-Southbound-CLS.csv  2809_Hampshire_Ave_N-Southbound-SPD.csv  2809_Hampshire_Ave_N-Total-CLS.csv  2809_Hampshire_Ave_N-Total-SPD.csv  2809_Hampshire_Ave_N-VOL.csv  2809_Hampshire_Ave_N-VOLAXL.csv  2941-Hampshire-Ave_AIO.csv  2941-Hampshire_AIO.csv  2941_Hampshire_Ave_N-ALL.csv  2941_Hampshire_Ave_N-Northbound-CLS.csv  2941_Hampshire_Ave_N-Northbound-SPD.csv  2941_Hampshire_Ave_N-Southbound-CLS.csv  2941_Hampshire_Ave_N-Southbound-SPD.csv  2941_Hampshire_Ave_N-Total-CLS.csv  2941_Hampshire_Ave_N-Total-SPD.csv  2941_Hampshire_Ave_N-VOL.csv  2941_Hampshire_Ave_N-VOLAXL.csv  3528 Noble Ave N_AIO.csv  3528_Noble_Ave_N-ALL.csv  3528_Noble_Ave_N-Northbound-CLS.csv  3528_Noble_Ave_N-Northbound-SPD.csv  3528_Noble_Ave_N-Southbound-CLS.csv  3528_Noble_Ave_N-Southbound-SPD.csv  3528_Noble_Ave_N-Total-CLS.csv  3528_Noble_Ave_N-Total-SPD.csv  3528_Noble_Ave_N-VOL.csv  3528_Noble_Ave_N-VOLAXL.csv  3540_Hampshire_Ave_N-ALL.csv  3540_Hampshire_Ave_N-Northbound-CLS.csv  3540_Hampshire_Ave_N-Northbound-SPD.csv  3540_Hampshire_Ave_N-Southbound-CLS.csv  3540_Hampshire_Ave_N-Southbound-SPD.csv  3540_Hampshire_Ave_N-Total-CLS.csv  3540_Hampshire_Ave_N-Total-SPD.csv  3540_Hampshire_Ave_N-VOL.csv  3540_Hampshire_Ave_N-VOLAXL.csv  (+227 more)
pages/: location_analysis.py  map_page.py
reference/: traffic_analysis.py
src/: 4848-nevada-ave-n.md  index.md  test.md  traffic-volume.md
src/components/: CoreMetrics-refactored.js  CoreMetrics.js  DataTable.js  ExampleRefactoredComponent.js  HourlyData.js  LocationOverview.js  PeakHours.js  SpeedCompliance.js  SpeedDistribution.js  SpeedViolationSeverity.js  SpeedingByHour.js  TemporalPatterns.js  VehicleClassification.js  VolumeMetrics.js
src/data/: 2809-Hampshire-Ave_AIO.csv  3624-Welcome-Ave_AIO.csv  4848-Nevada-Ave-N_AIO.csv
src/lib/: data-loader.js  metrics.js
src/styles/: shared-cards.css
src/utils/: chart-utils.js  layout-utils.js  style-utils.js  table-utils.js
tests/: conftest.py  test_calculation_accuracy.py  test_data_loader.py  test_metrics.py  test_posted_speed.py  test_visualizations.py
utils/: data_loader.py  metrics.py  styles.css  styles.py  visualizations.py
utils/parsers/: __init__.py  traffic_parser.py
utils/transformers/: __init__.py  traffic_transformer.py
utils/validators/: __init__.py  data_validator.py
