[project]
name = "traffic-studies"
version = "0.1.0"
description = "A comprehensive traffic analysis dashboard for Crystal, Minnesota, built with Streamlit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "streamlit[pdf]>=1.49.0",
]

[dependency-groups]
dev = ["ruff>=0.11.13", "pytest>=8.0.0", "pytest-cov>=6.0.0"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["ALL"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
