[project]
name = "traffic-studies"
version = "0.1.0"
description = "A comprehensive traffic analysis dashboard for Crystal, Minnesota, built with Streamlit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "streamlit[pdf]>=1.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0"
]

[tool.ruff]
# line-length = 120
indent-width = 4
target-version = "py312"
lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["ALL"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
